#2 fatJar対応